--- a/index.html
+++ b/index.html
@@ -4,22 +4,56 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GIPHY-API</title>
+    <title>ACTORS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+
 </head>
 
 <body>
+    <div class="container">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
-    <script src="./assets/javascript/app.js"></script>
+        <div class="jumbotron">
+                <h1 class="display-4">ACTOR SEARCH</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-8">
+
+                <!-- Rendered Buttons -->
+                <div id="buttons-view"></div>
+
+            </div>
+
+            <div class="col-4 box-width">
+                <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
+                    <div class="card-header">ADD AN ACTOR</div>
+                    <div class="card-body">
+                        <form id="actor-form">
+                            <label for="actor-input"></label>
+                            <input type="text" id="actor-input" placeholder="Keanu Reeves">
+                            <br>
+
+                            <!-- Button triggers new actor to be added -->
+                            <input id="add-actor" type="submit" value="SUBMIT">
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Actors will get dumped here -->
+            <div id="actors-view"></div>
+
+        </div>
+
+
+
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
