--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
 
         <div class="jumbotron">
-                <h1 class="display-4">ACTOR SEARCH</h1>
+                <h1 class="display-4">ACTOR GENERATOR</h1>
         </div>
 
         <div class="row">
